--- a/covidWarehouse/vignettes/care_home_comparison.Rmd
+++ b/covidWarehouse/vignettes/care_home_comparison.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "R Notebook"
+title: "Analysis of crude rates of symptomatic and confirm cases"
 runtime: shiny
 output:
   html_document:
@@ -24,6 +24,7 @@ devtools::load_all("..")
 extract_data()
 load_data()
 library(ggplot2)
+library(plotly)
 library(shiny)
 ch_data <- table_weekly_cases_home()
 
@@ -34,7 +35,11 @@ This report is based on `r formatbm(nrow(incidents))` Datix reports of incidents
 
 Incidents report were obtained from `r formatbm(dplyr::n_distinct(incidents$home_code))` care homes totalling `r formatbm(sum(beds[beds$year=="2020" & beds$home_code %in% unique(incidents$home_code), "beds"]))` beds. In 2020, Four Seasons Health Care comprises `r formatbm(dplyr::n_distinct(beds[beds$year=="2020", "home_code"]))` care homes with a total of `r formatbm(sum(beds[beds$year=="2020", "beds"]))` beds.
 
-```{r, echo=FALSE}
+ 
+
+```{r, echo=FALSE, fig.cap="Funnel plots of rates of symptomatic and confirmed cases with 95% (blue) and 99% (orange) Poisson control limits"}
+
+
 shinyApp(
   
   ui = fluidPage(
@@ -45,45 +50,128 @@ shinyApp(
                 width = "100%",
                 value = as.Date(c("2020-05-11", "2020-05-25")),
                 timeFormat = "%Y-%m-%d"), 
+    h5("Funnel plots with 95% (blue) and 99% (orange) Poisson control limits"),
     fluidRow(
-      column(width = 6, plotOutput("funnelPlot1")),
-      column(width = 6, plotOutput("funnelPlot2"))
-      ),
+      column(width = 6, plotlyOutput("funnelPlot1")),
+      column(width = 6, plotlyOutput("funnelPlot2"))
+    ), br(),
     fluidRow(
-      column(width = 6, plotOutput("funnelPlot3")),
-      column(width = 6, plotOutput("funnelPlot4"))
+      column(width = 6, plotlyOutput("funnelPlot3")),
+      column(width = 6, plotlyOutput("funnelPlot4"))
+    ), br(),
+    h5("Comparison of Datix and manager counts"),
+    fluidRow(
+      column(width = 6, plotlyOutput("validation_symptomatic")),
+      column(width = 6, plotlyOutput("validation_confirmed"))
     )
+   
   ),
   
   server = function(input, output) {
- 
-    output$funnelPlot1 = renderPlot({
-      plot_funnel(dplyr::filter(ch_data, week_starting >= input$date_range[1] &  week_starting < input$date_range[2]),
-                  y = first_symptomatic, denom = occupancy_imputed,
-                  home_code = home_code, home_name = home_name_clickview) +
-        ggplot2::labs(title = "Symptomatic cases (Datix)") 
+    
+    t <- list(
+      family = "arial, sans-serif",
+      size = 12 )
+    
+    output$funnelPlot1 = renderPlotly({
+      temp_funnel <- ch_data %>% 
+        dplyr::filter( week_starting >= input$date_range[1] & 
+                         week_starting < input$date_range[2]) %>% 
+        plot_funnel(y = first_symptomatic, denom = occupancy_imputed,
+                    home_code = home_code, home_name = home_name_clickview) 
+      ggplotly(temp_funnel, tooltip = c("text", "rate_per_100000", "observed_cases", "denom")) %>% 
+        plotly::layout(title = "Symptomatic cases (Datix)", font = t)
     })
-    output$funnelPlot2 = renderPlot({
-      plot_funnel(dplyr::filter(ch_data, week_starting >= input$date_range[1] &  week_starting < input$date_range[2]),
-                  y = tally_first_symptomatic, denom = occupancy_imputed,
-                  home_code = home_code, home_name = home_name_clickview) +
-        ggplot2::labs(title = "Symptomatic cases (manager tallies)")
+    output$funnelPlot2 = renderPlotly({
+      temp_funnel <- ch_data %>% 
+        dplyr::filter( week_starting >= input$date_range[1] & 
+                         week_starting < input$date_range[2]) %>% 
+        plot_funnel(y = tally_first_symptomatic, denom = occupancy_imputed,
+                    home_code = home_code, home_name = home_name_clickview)
+      ggplotly(temp_funnel, tooltip = c("text", "rate_per_100000", "observed_cases", "denom")) %>% 
+        plotly::layout(title = "Symptomatic cases (manager tallies)", font = t)
     })
-    output$funnelPlot3 = renderPlot({
-      plot_funnel(dplyr::filter(ch_data, week_starting >= input$date_range[1] &  week_starting < input$date_range[2]),
-                  y = first_confirmed, denom = occupancy_imputed,
-                  home_code = home_code, home_name = home_name_clickview) +
-        ggplot2::labs(title = "Confirmed cases (Datix)")
+    output$funnelPlot3 = renderPlotly({
+      temp_funnel <- ch_data %>% 
+        dplyr::filter( week_starting >= input$date_range[1] & 
+                         week_starting < input$date_range[2]) %>% 
+        plot_funnel(y = first_confirmed, denom = occupancy_imputed,
+                    home_code = home_code, home_name = home_name_clickview)
+      ggplotly(temp_funnel, tooltip = c("text", "rate_per_100000", "observed_cases", "denom")) %>% 
+        plotly::layout(title = "Confirmed cases (Datix)", font = t)
     })
-    output$funnelPlot4 = renderPlot({
-      plot_funnel(dplyr::filter(ch_data, week_starting >= input$date_range[1] &  week_starting < input$date_range[2]),
-                  y = tally_confirmed, denom = occupancy_imputed,
-                  home_code = home_code, home_name = home_name_clickview) +
-        ggplot2::labs(title = "Confirmed cases (manager tallies)")
+    output$funnelPlot4 = renderPlotly({
+      temp_funnel <- ch_data %>% 
+        dplyr::filter( week_starting >= input$date_range[1] & 
+                         week_starting < input$date_range[2]) %>% 
+        plot_funnel(y = tally_confirmed, denom = occupancy_imputed,
+                    home_code = home_code, home_name = home_name_clickview) 
+       ggplotly(temp_funnel, tooltip = c("text", "rate_per_100000", "observed_cases", "denom")) %>% 
+        plotly::layout(title = "Confirmed cases (manager tallies)", font = t)
     })
+    
+    output$validation_symptomatic <- renderPlotly({
+      temp_data <- ch_data %>% 
+        dplyr::filter( week_starting >= input$date_range[1] & 
+                         week_starting < input$date_range[2]) %>%
+        dplyr::group_by(home_code, home_name_clickview) %>%
+        dplyr::summarise(
+          tally_first_symptomatic = sum(tally_first_symptomatic, na.rm = T),
+          first_symptomatic = sum(first_symptomatic, na.rm = T)
+          )
+
+      temp_data <- dplyr::distinct(reference_homes, home_code, home_name_clickview) %>% 
+        dplyr::left_join(temp_data)
+      temp_data[[3]] <- tidyr::replace_na(temp_data[[3]], 0)
+      temp_data[[4]] <- tidyr::replace_na(temp_data[[4]], 0)
+      
+      temp_scatter <- ggplot(temp_data, aes(x = tally_first_symptomatic, y = first_symptomatic)) + 
+        geom_jitter(aes(text = paste("care_home:", home_name_clickview))) +
+        geom_abline(aes(intercept = 0, slope = 1,  col = "Identity", linetype = "Identity")) +
+        geom_smooth(aes(col="OLS", linetype = "OLS"), method = "lm", se = T) +
+        xlab("Manager counts") + ylab("Datix-derived counts") + 
+        labs(title="Symptomatic cases") +
+        scale_colour_manual(name="Line of fit",
+                            values = c("Identity" = "black", "OLS" = "blue", "Spline" = "red")) +
+        scale_linetype_manual(name="Line of fit",
+                              values = c("Identity" = "solid", "OLS" = "longdash", "Spline" = "dotted")) 
+      
+      plotly::layout(plotly::ggplotly(temp_scatter), font = t)
+    })
+    
+    output$validation_confirmed <- renderPlotly({
+      temp_data <- ch_data %>% 
+        dplyr::filter( week_starting >= input$date_range[1] & 
+                         week_starting < input$date_range[2]) %>%
+        dplyr::group_by(home_code, home_name_clickview) %>%
+        dplyr::summarise(
+          tally_confirmed = sum(tally_confirmed, na.rm = T),
+          first_confirmed = sum(first_confirmed, na.rm = T)
+          )
+
+      temp_data <- dplyr::distinct(reference_homes, home_code, home_name_clickview) %>% 
+        dplyr::left_join(temp_data)
+      temp_data[[3]] <- tidyr::replace_na(temp_data[[3]], 0)
+      temp_data[[4]] <- tidyr::replace_na(temp_data[[4]], 0)
+      
+      temp_scatter <- ggplot(temp_data, aes(x = tally_confirmed, y = first_confirmed)) + 
+        geom_jitter(aes(text = paste("care_home:", home_name_clickview))) +
+        geom_abline(aes(intercept = 0, slope = 1,  col = "Identity", linetype = "Identity")) +
+        geom_smooth(aes(col="OLS", linetype = "OLS"), method = "lm", se = T) +
+        xlab("Manager counts") + ylab("Datix-derived counts") + 
+        labs(title="Confirmed cases") +
+        scale_colour_manual(name="Line of fit",
+                            values = c("Identity" = "black", "OLS" = "blue", "Spline" = "red")) +
+        scale_linetype_manual(name="Line of fit",
+                              values = c("Identity" = "solid", "OLS" = "longdash", "Spline" = "dotted")) 
+      
+      plotly::layout(plotly::ggplotly(temp_scatter), font = t)
+    })
+    
+    
   },
   
-  options = list(height = 1000)
+  options = list(height = 1500)
 )
 ```
  
