improve resident days calculation and validation

--- a/covidWarehouse/vignettes/validation.Rmd
+++ b/covidWarehouse/vignettes/validation.Rmd
@@ -10,6 +10,7 @@ vignette: >
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
   echo=FALSE,
+  warning = FALSE,
   fig.width = 7,
   fig.height = 5,
   collapse = TRUE,
@@ -98,25 +99,45 @@ approx_occupancy <- resident_days_approx(timelines = timelines,
   ) %>% 
   dplyr::group_by(home_code, week_ending) %>% 
   dplyr::summarise(
-    approx_occupancy = sum(approx_occupancy)
+    approx_resident_days = sum(approx_occupancy)
   )
 
 occ_home <- merge(
   approx_occupancy,
   occupancy,
   all = FALSE
-)  
+) 
+
+bed2020 <- dplyr::filter(beds, year == "2020") %>% 
+  dplyr::select(-year)
+
+occ_home <- merge(
+  occ_home,
+  bed2020,
+  all.x = TRUE
+) %>% 
+  dplyr::mutate(contract_10pc = dplyr::case_when(
+    total_contract_beds/beds >= .1 ~ ">=10% contract beds",
+    TRUE ~ "<10% contract beds"
+  ))
 
 occ_global <- occ_home %>% 
-  dplyr::group_by(week_ending) %>% 
+  dplyr::group_by(home_code, contract_10pc) %>% 
   dplyr::summarise(
-    approx_occupancy = sum(approx_occupancy, na.rm = T),
-    occupancy = sum(occupancy, na.rm = T)
-  ) 
+    approx_resident_days = sum(approx_resident_days, na.rm = T),
+    resident_days = sum(resident_days, na.rm = T)
+  ) %>% 
+  dplyr::mutate(
+    outliers = dplyr::if_else(
+      abs(1-approx_resident_days/resident_days) > .10 &
+        contract_10pc != ">=10% contract beds",
+      home_code,
+      "")
+  )
 
-ggplot(occ_home, aes(x = occupancy, y = approx_occupancy)) +
-  geom_point() +
-   geom_abline(aes(intercept = 0, slope = 1,  col = "Identity", linetype = "Identity")) +
+ggplot(occ_home, aes(x = resident_days, y = approx_resident_days)) +
+  geom_point(aes(shape = contract_10pc)) +
+  geom_abline(aes(intercept = 0, slope = 1,  col = "Identity", linetype = "Identity")) +
   geom_smooth(aes(col="OLS", linetype = "OLS"), method = "lm", se = T) +
   xlab("Resident-days provided by FSHC") +
   ylab("Resident-days approximated\nfrom resident records") +
@@ -124,22 +145,36 @@ ggplot(occ_home, aes(x = occupancy, y = approx_occupancy)) +
   scale_colour_manual(name="Line of fit",
     values = c("Identity" = "black", "OLS" = "blue", "Spline" = "red")) +
   scale_linetype_manual(name="Line of fit",
-    values = c("Identity" = "solid", "OLS" = "longdash", "Spline" = "dotted")) 
+    values = c("Identity" = "solid", "OLS" = "longdash", "Spline" = "dotted")) +
+  scale_shape_manual(name="Bed composition",
+    values = c(1, 3)) 
  
 ```
+
 ```{r, fig.cap = "Weekly total resident-days"}
 
-ggplot(occ_global, aes(x = occupancy, y = approx_occupancy)) +
-  geom_point() +
+ggplot(occ_global, aes(x = resident_days, y = approx_resident_days)) +
+  geom_point(aes(shape = contract_10pc)) +
+  geom_text(aes(label = outliers), 
+            nudge_x = .1,  nudge_y = .15, vjust = "outward", hjust = "outward") +
    geom_abline(aes(intercept = 0, slope = 1,  col = "Identity", linetype = "Identity")) +
   geom_smooth(aes(col="OLS", linetype = "OLS"), method = "lm", se = T) +
   xlab("Resident-days provided by FSHC") +
   ylab("Resident-days approximated from resident records") +
-  ggtitle("Weekly total resident-days across FSHC") +
+  ggtitle("Total resident-days across FSHC since 9 March 2020") +
   scale_colour_manual(name="Line of fit",
     values = c("Identity" = "black", "OLS" = "blue", "Spline" = "red")) +
   scale_linetype_manual(name="Line of fit",
-    values = c("Identity" = "solid", "OLS" = "longdash", "Spline" = "dotted")) 
+    values = c("Identity" = "solid", "OLS" = "longdash", "Spline" = "dotted"))+
+  scale_shape_manual(name="Bed composition",
+    values = c(1, 3)) 
+```
+
+
+```{r}
+merge(dplyr::select(reference_homes, home_code, home_name_datix),
+      dplyr::filter(occ_global, outliers != "")) %>%
+  dplyr::select(-outliers, -contract_10pc)
 ```
 
 ### Comparison of manager-reported tally counts with Datix-derived counts
@@ -163,7 +198,8 @@ ch_data_all <- ch_data %>%
     home_code_lbl = if_else(tally_first_symptomatic>15, home_code, NA_character_),
     home_code_lbl2 = if_else(tally_confirmed>15 | first_confirmed>10, home_code, NA_character_))
 
-ggplot(data = ch_data_all, aes(x = tally_first_symptomatic, y = first_symptomatic)) + 
+ggplot(data = ch_data_all, 
+       aes(x = tally_first_symptomatic, y = first_symptomatic)) + 
   geom_point() +
   geom_text(aes(label = home_code_lbl), check_overlap = TRUE, 
             nudge_x = .5,  nudge_y = 1, vjust = "outward", hjust = "outward") + 
@@ -174,8 +210,6 @@ ggplot(data = ch_data_all, aes(x = tally_first_symptomatic, y = first_symptomati
     values = c("Identity" = "black", "OLS" = "blue", "Spline" = "red")) +
   scale_linetype_manual(name="Line of fit",
     values = c("Identity" = "solid", "OLS" = "longdash", "Spline" = "dotted")) 
- 
-  
 
 ```
 
